# rust_grpc_server

./: Cargo.toml  build.rs
proto/: homeservice.proto
src/: client.rs  server.rs
